# model-hub

./: .gitignore  LICENSE  README.md  lint.sh  mypy.ini  requirements.txt  setup.cfg  setup.py  stubgen.sh  test.sh
model_hub/: config.py  main.py  prompter.py
model_hub/models/: gemini.py  model_abc.py  openai.py
tests/: test_config.py  test_gemini.py  test_main.py  test_openai.py  test_prompter.py
