[metadata]
name = model_hub
version = 0.1.0
description = A hub for managing machine learning models.
author = ksuaning-au
author_email = ksuaning@gmail.com
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.11
install_requires =
    openai
    google-genai

[options.packages.find]
exclude =
    tests*